fitness-app-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pavithra-ns 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-app
  namespace: pavithra-ns
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: fitness
  template:
    metadata:
      labels:
        app: fitness
    spec:
      containers:
        - name: fitness-cont
          image: muralisocial123/fitness-app:v1.0.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m" 
---
apiVersion: v1
kind: Service
metadata:
  name: fitness-service
  namespace: pavithra-ns
spec:
  selector:
    app: fitness
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000              
  type: ClusterIp
