flipkart-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pavithra-ns 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-app
  namespace: pavithra-ns
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: flipkart
  template:
    metadata:
      labels:
        app: flipkart
    spec:
      containers:
        - name: flipkart-cont
          image: muralisocial123/flipkart-clone-kuberox:v1.1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m" 
---
apiVersion: v1
kind: Service
metadata:
  name: flipkart-service
  namespace: pavithra-ns
spec:
  selector:
    app: flipkart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
