flower-app-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pavithra-ns 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-app
  namespace: pavithra-ns
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
        - name: flower-cont
          image: muralisocial123/kyndrl-flower-app:v1.1.0
          ports:
            - containerPort: 3015
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m" 
---
apiVersion: v1
kind: Service
metadata:
  name: flower-service
  namespace: pavithra-ns
spec:
  selector:
    app: flower
  ports:
    - protocol: TCP
      port: 3015
      targetPort: 3015              
  type: ClusterIP
