transaction-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pavithra-ns 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-app
  namespace: pavithra-ns
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: transaction
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
        - name: transaction-cont
          image: muralisocial123/transaction-app:v1.p.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m" 
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: pavithra-ns
spec:
  selector:
    app: transaction
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000              
  type: ClusterIp
